2007-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Check if MT and MTX exists.

2007-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Set CHANGER environment variable.

2007-01-24  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c: Don;t check for duplicate -o options.
	* common-src/util.c: Check for duplicate -o options.
	* recover-src/amrecover.c: Change precedence of option.

2007-01-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Fix compiler warning.

2007-01-23  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (tcpm_recv_token): Check size < 0.

2007-01-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Check duplicate DLE with match_host and
				 match_disk.

2007-01-18  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Improve check if /etc/dumpdates in not there.

2007-01-18  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amfetchdump.c: Set arg_state to ARG_GET_HOST.

2007-01-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check tape_access.
	* server-src/taper.c: Improve message.

2007-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/getconf.c: Fix segfault in parameter parsing.

2007-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c Set default length/filemark correctly.
	* man/xml-source/amanda.conf.5.xml: Document they are in kbytes.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c (do_sendpkt): Send packet if handle != NULL.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c, common-src/util.h, server-src/conffile.c,
	  server-src/diskfile.c: Keep different list for exclude file and list.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c (read_file): Don't count first header twice.
