@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: diskfile.c,v 1.95.2.10 2007/01/24 12:11:53 martinea Exp $
+ * $Id: diskfile.c,v 1.95.2.11 2007/01/25 15:15:30 martinea Exp $
  *
  * read disklist file
  */
@@ -390,10 +390,14 @@ parse_diskline(
     s[-1] = '\0';
     host = lookup_host(fp);
     if (host == NULL) {
-      hostname = stralloc(fp);
-      malloc_mark(hostname);
+	hostname = stralloc(fp);
+	malloc_mark(hostname);
     } else {
-      hostname = stralloc(host->hostname);
+	hostname = stralloc(host->hostname);
+	if (strcmp(host->hostname, fp) != 0) {
+	    disk_parserror(filename, line_num, "Same host with different case: \"%s\" and \"%s\".", host->hostname, fp);
+	    return -1;
+	}
     }
 
     shost = sanitise_filename(hostname);
