@@ -1,4 +1,7 @@
 2007-01-25  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/diskfile.c: Check hostname have same case.
+
+2007-01-25  Jean-Louis Martineau <martineau@zmanda.com>
 	* changer-src/chg-zd-mtx.sh.in: Check if MT and MTX exists.
 
 2007-01-25  Jean-Louis Martineau <martineau@zmanda.com>
